examples/test/testpolicy16525.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16525
  namespace: namespace187
spec:
  podSelector:
    matchLabels:
      key49: value16
      key16: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value18
      podSelector:
        matchLabels:
          key19: value12
          key3: value30
          key43: value31
